# DiracNet_V3

prompts/: 00_overview.md  (+17 more)
rc_pinn_art_project/: README.md  pyproject.toml  requirements.txt
rc_pinn_art_project/configs/: default.yaml  v3_phase1_quick.yaml  v3_phase1_stage_a_z1_8.yaml  v3_phase1_stage_a_z1_8_phase2.yaml  v3_phase1_stage_a_z1_8_phase3.yaml  v3_smoke.yaml
rc_pinn_art_project/docs/: STAGE_A_PHASE2.md  STAGE_A_PHASE3.md  STAGE_A_ROUND1.md
rc_pinn_art_project/pinn_art/: __init__.py  constants.py
rc_pinn_art_project/scripts/: v3_analyze_gate_reports.py  v3_build_racah_cache.py  v3_check_gpu.py  v3_diagnose_loss.py  v3_diagnose_physics_chain.py  v3_evaluate.py  v3_gate_analytic.py  v3_infer.py  v3_prepare_hydrogenic.py  v3_round1_prepare.sh  v3_round2_train.sh  v3_train_stage_a.py
rc_pinn_art_project/tests/: conftest.py  test_asymptotic_loss.py  test_collate_batch.py  test_config_parser.py  test_coords_branch_features.py  test_coords_mixed_map.py  test_dataset_collate.py  test_deeponet_forward.py  test_diagonal_fallback.py  test_dirac_operator_h1s.py  test_eigh_gradient_finite.py  test_eigh_known_spectrum.py  test_full_forward_smoke.py  test_gate_fail_on_random.py  test_gate_n_parsing.py  test_gate_pass_on_analytic.py  test_hamiltonian_assemble.py  test_hydrogenic_P_jax.py  test_import_smoke.py  test_infer_jit_shapes.py  test_init_state_hydrogenic.py  test_nist_inject.py  test_orthogonalizer.py  test_pde_loss.py  test_racah_cache.py  test_siren_layers.py  test_slater_integral_hydrogenic.py  test_train_step_smoke.py  test_transition_hydrogen_lya.py
(+46 files in other folders)
